# google-music-scripts

./: .editorconfig  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: ci.yml  publish.yml
docs/: Makefile  conf.py  index.rst  make.bat
src/google_music_scripts/: __about__.py  __init__.py  __main__.py  cli.py  commands.py  config.py  constants.py  core.py  utils.py
src/google_music_scripts/commands/: delete.py  download.py  quota.py  search.py  sync.py  upload.py
