[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "google-music-scripts"
description = "A CLI utility for interacting with Google Music."
version = "4.2.0"

license = "MIT"

authors = ["thebigmunch <mail@thebigmunch.me>"]

readme = "README.md"

repository = "https://github.com/thebigmunch/google-music-scripts"
homepage = "https://github.com/thebigmunch/google-music-scripts"

[tool.poetry.dependencies]
python = "^3.6"

appdirs = "^1.0"
attrs = ">=18.2,<19.4"
audio-metadata = "^0.6"
google-music = "^3.2"
google-music-proto = "^2.5.1"
google-music-utils = "^2.1"
loguru = "^0.3"
pendulum = "^2.0"
pprintpp = "0.*"
natsort = ">=5.0,<7.0"
tbm-utils = "^1.0.0"
tomlkit = "^0.5"

flake8 = { version = "^3.5", optional = true }
flake8-builtins = { version = "^1.0", optional = true }
flake8-comprehensions = { version = ">=2.0,<=4.0", optional = true }
flake8-import-order = { version = "^0.18", optional = true }
flake8-import-order-tbm = { version = "^1.0", optional = true }
nox = { version = "^2019", optional = true }
sphinx = { version= "^2.0", optional = true}
sphinx-argparse = { version = "^0.2", optional = true }

[tool.poetry.extras]
dev = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm",
	"nox",
	"sphinx",
	"sphinx-argparse"
]
doc = [
	"sphinx",
	"sphinx-argparse"
]
lint = [
	"flake8",
	"flake8-builtins",
	"flake8-comprehensions",
	"flake8-import-order",
	"flake8-import-order-tbm"
]

[tool.poetry.scripts]
gms = "google_music_scripts.cli:run"
